# NEXUSMON

./: .agent.md  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  PRESS_KIT.md  README.md  artifacts.legacy-file  companion.py  companion_cli.py  companion_examples.py  config.json  examples.py  fix_encoding.py  git_fsck_report.txt  git_ls_remote_report.txt  git_reflog_report.txt  git_refs_report.txt  git_status_report.txt  handoff.md  jest.config.json  nexusmon_cli.py  nexusmon_server.py  package-lock.json  package.json  pyproject.toml  pytest.ini  railway.json  render.yaml  requirements.txt  run_swarmz.py  server_legacy_overlay.py  showcase.py  start.bat  swarmz.py  swarmz_cli.py  (+2 more)
.claude/: settings.local.json
.github/: FUNDING.yml
cockpit/: index.html  package-lock.json  package.json  vite.config.js
config/: agent_handoff.example.json  agent_runtime_policy.json  runtime.json
core/: agent_manifest.py  capability_router.py  manifest_registry.py  reflection.py  registry.py  reversible.py  startup_validation.py
docs/: CONTRIBUTING.md  DOCTRINE.md  NEXUSMON_DOCTRINE.md  NEXUSMON_MONARCH_SHELL.md  NEXUSMON_ZEROPOINT_FORM.md  ROADMAP.md  SOVEREIGN_ROADMAP.md  TECHNICAL_OVERVIEW.md  agent_orchestration_plan.md  github_presence_pack.md  repository_layout.md  root_compaction_audit_2026-03-07.md  root_compaction_audit_batch2_2026-03-07.md  root_compaction_plan_2026-03-07.md  truthful_migration_playbook.md
frontend/: .env.production  vite.config.ts
nexusmon/: __init__.py
nexusmon_runtime/: __init__.py
(+354 files in other folders)
