[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexusmon"
version = "2.0.0"
description = "NEXUSMON — governed, sovereign, operator-centric AI organism"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["swarmz*", "swarmz_runtime*", "swarmz_app*", "kernel_runtime*", "addons*"]
exclude = [
  "swarmz-mobile*",
  "*.node_modules*",
  "node_modules*",
  "tests*",
  "build*",
  "dist*",
  "_backup*"
]

[tool.mypy]
strict = true
python_version = "3.11"
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["core"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.black]
extend-exclude = '''
(
  tools/vscode-scaffold-bot/templates
)
'''
